# location-allocation

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: ci-tests.yml
docs/: conf.py  index.rst
examples/: maximize_capacitated_coverage.py  maximize_coverage.ipynb  maximize_coverage.py  maximize_coverage_capacitated.ipynb  maximize_coverage_capacitated.py  maximize_coverage_minimize_cost.ipynb  maximize_coverage_minimize_cost.py  maximize_coverage_minimize_facilities.ipynb  maximize_coverage_minimize_facilities.py  performance.ipynb  utils.py
location_allocation/: __init__.py  _maximize_capacitated_coverage.py  _maximize_coverage.py  _maximize_coverage_capacitated.py  _maximize_coverage_minimize_cost.py  _maximize_coverage_minimize_facilities.py  common.py  utils.py
location_allocation/tests/: conftest.py  test_maximize_capacitated_coverage.py  test_maximize_coverage.py  test_maximize_coverage_capacitated.py  test_maximize_coverage_minimize_cost.py  test_maximize_coverage_minimize_facilities.py  test_version.py
tests/: conftest.py  test_maximize_coverage.py  test_maximize_coverage_capacitated.py  test_maximize_coverage_minimize_cost.py  test_maximize_coverage_minimize_facilities.py
