[tool.poetry]
name = "location-allocation"
version = "0.1.0"
description = ""
authors = ["Timothy Ellersiek <tim@gis-ops.com>"]

readme = "README.md"
homepage = "https://gis-ops.com"
# repository = "https://gitlab.com/gis-ops/wigeogis/generic-osm-converter"
packages = [{include = "location_allocation"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
matplotlib = "^3.4.2"
mip = "^1.13.0"
numpy = "^1.20.3"
Shapely = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^2.10"
isort = "^4.3.21"
pre-commit = "^1.18.3"
flake8 = "^3.8.4"
flake8-docstrings = "^1.5.0"
darglint = "^1.7.0"
tox = "^3.23.0"
tox-pyenv = "^1.1.0"
scipy = "^1.6.3"
sphinx-rtd-theme = "^0.5.2"
Sphinx = "^4.1.1"
# if this updates we better also update the pre-commit.yaml
black = "21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 105
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | dist
)/
'''

[tool.isort]
line_length = 95
case_sensitive = true
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
